--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
 			<version>3.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
